fix: add margin-top to loop-wrap for spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -562,8 +562,9 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
    font-size: clamp(5.5rem, 6vw, 6.6rem) !important;
    font-weight: 300 !important;
    line-height: 1.25 !important;
-   margin: 0 0 3rem 0 !important;
+   margin: 0 0 5rem 0 !important;
    letter-spacing: -0.996125px !important;
+   display: block !important;
 }
 
 .loop-subtitle-title span {
@@ -2084,6 +2085,7 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
 .loop-wrap {
    display: grid;
    width: 100%;
+   margin-top: 5rem;
    margin-bottom: var(--grid-gap);
    -webkit-animation: slideTop .8s ease;
    animation: slideTop .8s ease;
